--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -38,5 +38,14 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+        </dependency>
+
+
+
+
+
     </dependencies>
 </project>
