--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8081
+
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.health-check-path=/health
