--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -38,10 +38,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>mongodb</artifactId>
-            <scope>test</scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
         </dependency>
+
+
     </dependencies>
 
 </project>
