--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.data.mongodb.url=mongodb://localhost:27017/product-service
 spring.data.mongodb.database=product-service
 
 server.port=8080
+
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.health-check-path=/health
